<resources>
    <string name="app_name">ScheduleWizard</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general">Général</string>
    <string name="urlText">Url de l\'agenda exportée</string>
    <string name="url">https://ent.univ-tours.fr/uPortal/f/welcome/normal/render.uP</string>
    <string name="showTitle">Affichage</string>
    <string name="showWeek">Semaine à afficher</string>
    <string name="showNumberWeek">16 semaines</string>
    <string name="alarm">Réveil</string>
    <string name="alarmActiv">Activé</string>
    <string name="courseName">EP1 - Complexité et graphes TD1</string>
    <string name="Date">9 mars 2023 10:15 -12:15</string>
    <string name="checkListText">Checklist</string>
    <string name="teacher">Billaut Jean-Charles</string>
    <string name="room">GR E1 2090</string>
    <string name="preference_file_key">config</string>
</resources>